run verb to generate docs

--- a/.verb.md
+++ b/.verb.md
@@ -11,7 +11,7 @@
 var Prompt = require('..');
 var prompt = new Prompt({
   type: 'password',
-  message: 'Enter your git password',
+  message: 'Enter your password please',
   name: 'password'
 });
 
@@ -20,6 +20,28 @@ prompt.run()
     console.log(answers)
   });
 ```
+
+### mask function
+
+Use [prompt-password-strength][], or pass a function to customize how the input is masked:
+
+```js
+var Prompt = require('..');
+var prompt = new Prompt({
+  type: 'password',
+  message: 'Enter your password please',
+  name: 'password',
+  mask: function(input) {
+    return '█' + new Array(String(input).length).join('█');
+  }
+});
+
+prompt.run()
+  .then(function(answers) {
+    console.log(answers)
+  });
+```
+
 
 ## Enquirer usage
 
@@ -34,7 +56,7 @@ enquirer.register('password', require('{%= name %}'));
 // questions can be an array or object
 var questions = {
   type: 'password',
-  message: 'Enter your git password',
+  message: 'Enter your password please',
   name: 'password'
 };
 
